src/css/App.css
.boxes {
  padding:0;
  margin:3px;
  border: 3px solid rgba(0, 0, 0, 0.164);
  background-color: #e7d1ec;
  border-radius: 15px;
  min-height:450px;
  overflow: hidden;
}

.boxes h3 {
  text-align: center;
  margin: 2px 30px; /*Top, Bottom || Right, Left*/
  border-image: 
   linear-gradient(0deg,#B497D6 2px,#0000 0) fill 0;
}

.boxes:hover {
  overflow: visible;
}

.word {
  margin: 0;
  padding:0;
}

.word h4, p {
  padding: 1px auto;
  margin: 1px auto;
  text-align: center;
}

.word p:hover{
  position:relative;
  z-index: 999;
  background-color: #e7d1ec;
  border-radius: 10px;
}

#taskcontainer {
  margin: 1px 7%;
  display:flex;
  flex-direction: column;
}

.weathercontainer {
  margin-left: 7%;
}

.dummy{
  display: flex;
  width: fit-content;
  margin: 4px auto;
  padding:0;
}
iframe{
  border-radius: 20px;
}
#eleven iframe{
  padding:0;
  margin:0;
  margin-top: 1%;
  border:none;
}

#ten iframe, #four iframe{
  height:85%;
  width: 90%;
  padding:0;
  margin: 5px auto; /*Top, Bottom || Right, Left*/
  border-width:0;
  border-radius: 20px;
}
#five iframe{
  /* margin-left: 4%;
  margin-bottom: 0;
  padding-bottom: 0; */
  /* position: relative; */
  z-index: -1;
}

#five {
  position: relative;
  overflow:clip;
  vertical-align: bottom;
}
#five:hover {
  overflow: visible;
}

.container {
  height:80%;
  display:flex; 
  flex-direction: column; 
  background-color: #B497D6;
  height: fit-content;
}

@media screen and (min-width: 768px) {
  .container {
    display:grid;
    grid-template-columns: 16.6% 16.6% 16.6% 16.6% 16.6% 17%;
    grid-template-rows: 33% 33% 34%;
    height:80%
  }
  .boxes {
    min-height: auto;
  }
}

.app {
  height:100vh;
  display:flex;
  flex-direction: column;;
}

#one {
  grid-column: 1 / span 6;
}
#two {
  grid-column:1;
  grid-row:1 /span 3;
}
#three {
  grid-column:2 / span 3;
  grid-row:1;
}
#four {
  grid-column:2 / span 2;
  grid-row:2 / span 2;
}
#five {
  grid-column:4;
  grid-row:2 / span 2;
  z-index: 999;
}
#six {
  grid-column:2;
  grid-row:3;
}
#seven {
  grid-column:3;
  grid-row:3;
}
#eight {
  grid-column:5;
  grid-row:3;
}
/* #nine {
  grid-column:5;
  grid-row:3;
} */
#ten {
  grid-column:5 / span 2;
  grid-row:1 / span 2;
}
#eleven {
  grid-column:5 / span 2;
  grid-row:3;
}

#three ol{
  text-align: left;
}

#ten {
  text-align: center;
}

#root {
  width:100%;
  height:100%;
  margin:0;
  padding:0;
}
h2{
  text-align: center;
  font-size: 230%;
  margin:18px 0; /*Top, Bottom || Right, Left*/
}

.clear{
  margin-top: 130%;
  /* margin-right: 80%; */
  margin-bottom: 1%;
  
  /* margin-left: 50%; */
  width:100%;
  padding: 1px;
  /* color:#B497D6; */
  background-color: #B497D6;
  border-color: rgb(99, 97, 97);
}
#add {
    margin-top: 1%;
  /* margin-right: 80%; */
  margin-bottom: 1%;
  margin-left: 1%;
  /* width:100%; */
  width:40%;
  height:10%;
  padding: 1px;
  /* color:#B497D6; */
  background-color: #B497D6;
  border-color: rgb(99, 97, 97);
  font-size: 15px;
}
#enter {
  width:60%;
  height:10%;
  margin-top: 1.5%;
}

#adder{
  display: flex;
  flex-direction: row;
}
.tasks {
  overflow-y: scroll;
}
#empty {
  height: auto;
}

#tasks{
  /* color:aliceblue; */
  height:100%;
  min-height: 100px;
  border: black;
  border-width: 10px;
}

.tomorrow {
  /* width:50%; */
  padding-bottom:22px;
  position:relative;
}

.tomorrow > a{
  position: absolute;
  bottom: 0;
  transform: translateX(-50%); 
  left: 50%;
}

#four {
  overflow:hidden;
}
#four > div {
  /* margin-top:4%; */
  margin:10%;
}

